[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgacc"
version = "0.1.0"
description = "Telegram multi-account manager using sessions/ JSON and OpenTele bootstrap."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "telethon",
  "opentele",
]
authors = [
  { name = "Account Connector Contributors" },
]
keywords = ["telegram", "telethon", "opentele", "session", "json"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["tgacc"]
